Line Art modifier animation screen refresh problem #86692

Closed
opened 2021-03-18 10:04:55 +01:00 by Denis Belov · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-17 23:14, hash: 30b5fd1a3c
Worked: -

Short description of error
Line Art modifier do not redraw screen properly in animation if playback starts from 0 frame (it leaves all drawn lines on screen). If playback starts from frame 1 screen refreshes as expected.

Playback from frame 1:
la_1.jpg

Playback from frame 0:
la_2.jpg

Exact steps for others to reproduce the error
1 Create simple animation for object (rotation with 2 keyframes)
2 Add Scene (Collection) Line art
3 Start playback from 0 frame in timeline

lineart.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-17 23:14, hash: `30b5fd1a3c` Worked: - **Short description of error** Line Art modifier do not redraw screen properly in animation if playback starts from 0 frame (it leaves all drawn lines on screen). If playback starts from frame 1 screen refreshes as expected. Playback from frame 1: ![la_1.jpg](https://archive.blender.org/developer/F9897636/la_1.jpg) Playback from frame 0: ![la_2.jpg](https://archive.blender.org/developer/F9897638/la_2.jpg) **Exact steps for others to reproduce the error** 1 Create simple animation for object (rotation with 2 keyframes) 2 Add Scene (Collection) Line art 3 Start playback from 0 frame in timeline [lineart.blend](https://archive.blender.org/developer/F9897641/lineart.blend)
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this on the 2.93.0 Alpha, branch: master, commit date: 2021-03-18 08:16, hash: aeff59073b.

Actually, for me, this happens starting from all frames. Toggling the Edit Mode modifier display fixes the problem though.
EDIT: After I toggle the edit mode button in the modifier, it always happens starting from frame 0. Notice that frame 0 is outside the Start and End frame range.

I can reproduce this on the 2.93.0 Alpha, branch: master, commit date: 2021-03-18 08:16, hash: `aeff59073b`. ~~Actually, for me, this happens starting from all frames. Toggling the Edit Mode modifier display fixes the problem though.~~ EDIT: After I toggle the edit mode button in the modifier, it always happens starting from frame 0. Notice that frame 0 is outside the Start and End frame range.
Member

Added subscriber: @ChengduLittleA

Added subscriber: @ChengduLittleA
YimingWu self-assigned this 2021-03-18 10:40:32 +01:00
Member

Confirmed. This happens when you starts playback from behind any active gpencil frames.

Confirmed. This happens when you starts playback from behind any active gpencil frames.

This issue was referenced by d39a1e3cab

This issue was referenced by d39a1e3cab642764b9b42a955a4a411ae65bf0b7

This issue was referenced by 53018b4ac8a52c61ae1fb95ba3d81119a85357d3

This issue was referenced by 53018b4ac8a52c61ae1fb95ba3d81119a85357d3
Member

Added the commit to fix the issue. This patch includes:

  • When adding gpencil line art, new frame will be always on frame 0.
  • Frames before the first existing frame in gpencil object will not have line art result from the modifier (but bake will fill those frames).
Added the commit to fix the issue. This patch includes: - When adding gpencil line art, new frame will be always on frame 0. - Frames before the first existing frame in gpencil object will not have line art result from the modifier (but bake will fill those frames).

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86692
No description provided.