Fix T86692: Start Line Art GP objects on frame 0

If playback starts before the first GP frame, we will get "ghost"
strokes.