source/blender/editors/gpencil/gpencil_add_lineart.c
@@ -111,7 +111,7 @@ void ED_gpencil_create_lineart(bContext *C, Object *ob)
   bGPDlayer *lines = BKE_gpencil_layer_addnew(gpd, "Lines", true);
 
   /* frames */
-  BKE_gpencil_frame_addnew(lines, CFRA);
+  BKE_gpencil_frame_addnew(lines, 0);
 
   /* update depsgraph */
   /* To trigger modifier update, this is still needed although we don't have any strokes. */
